--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,24 @@ license = "Apache-2.0"
 description = "A library for handling BLS signatures"
 
 [dependencies]
-bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
-pairing = "0.22"
+bls12_381 = { version = "0.7.1", default-features = false, features = [
+    "groups",
+    "pairings",
+    "experimental",
+] }
+pairing = { version = "0.22" }
 lazy_static = "1"
-rand = "0.6"
-sha2 = "0.9"
-hex = "0.4"
+rand = { version = "0.8.5", default-features = false }
+sha2 = { version = "0.9", default-features = false }
+hex = { version = "0.4", default-features = false }
+
+[features]
+default = ["alloc"]
+alloc = [
+    "bls12_381/alloc",
+    "rand/alloc",
+    "rand/std",
+    "rand/std_rng",
+    "rand/getrandom",
+    "hex/alloc",
+]
