--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ bls12_381 = { version = "0.7.1", default-features = false, features = [
     "experimental",
 ] }
 pairing = { version = "0.22" }
-lazy_static = "1"
+lazy_static = { version = "1", optional = true }
 rand = { version = "0.8.5", default-features = false }
 sha2 = { version = "0.9", default-features = false }
 hex = { version = "0.4", default-features = false }
@@ -26,4 +26,5 @@ alloc = [
     "rand/std_rng",
     "rand/getrandom",
     "hex/alloc",
+    "lazy_static",
 ]
