--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = { version = "1", optional = true }
 rand = { version = "0.8.5", default-features = false }
 sha2 = { version = "0.9", default-features = false }
 hex = { version = "0.4", optional = true }
+cfg-if = "1.0.0"
 
 [features]
 default = ["alloc"]
