--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,8 @@ license = "Apache-2.0"
 description = "A library for handling BLS signatures"
 
 [dependencies]
-bls12_381 = { version = "0.7.1", default-features = false, features = [
-    "groups",
-    "pairings",
-    "experimental",
-] }
-pairing = { version = "0.22" }
+bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "experimental"] }
+pairing = "0.22"
 lazy_static = { version = "1", optional = true }
 rand = { version = "0.8.5", default-features = false }
 sha2 = { version = "0.9", default-features = false }
