--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ bls12_381 = { version = "0.7", default-features = false, features = ["groups", "
 pairing = "0.22"
 lazy_static = { version = "1", optional = true }
 rand = { version = "0.8.5", default-features = false }
-sha2 = { version = "0.9", default-features = false }
+sha2 = "0.9"
 hex = { version = "0.4", optional = true }
 cfg-if = "1.0.0"
 
