--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,14 @@ description = "A library for handling BLS signatures"
 [dependencies]
 bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "experimental"] }
 pairing = "0.22"
-lazy_static = { version = "1", optional = true }
+lazy_static = { version = "1", optional = true, default-features = false }
 rand = { version = "0.8.5", default-features = false }
-sha2 = "0.9"
-hex = { version = "0.4", optional = true }
-cfg-if = "1.0.0"
+sha2 = { version = "0.9", default-features = false }
+hex = { version = "0.4", optional = true, default-features = false }
 
 [features]
 default = ["alloc"]
-alloc = [
-    "bls12_381/alloc",
-    "rand/alloc",
-    "rand/std",
-    "rand/std_rng",
-    "rand/getrandom",
-    "hex/alloc",
-    "lazy_static",
-    "hex",
-]
+alloc = ["bls12_381/alloc", "lazy_static", "hex/alloc"]
+
+[dev-dependencies]
+hex = "0.4"
