--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,16 @@ license = "Apache-2.0"
 description = "A library for handling BLS signatures"
 
 [dependencies]
-bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "experimental"] }
+bls12_381 = { version = "0.7", default-features = false, features = [
+    "groups",
+    "pairings",
+    "experimental",
+] }
 pairing = "0.22"
 lazy_static = { version = "1", optional = true, default-features = false }
 rand = { version = "0.8.5", default-features = false }
-sha2 = { version = "0.9", default-features = false }
+# sha2 = { version = "0.9", default-features = false }
+sha2 = "0.9"
 hex = { version = "0.4", optional = true, default-features = false }
 
 [features]
