--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ bls12_381 = { version = "0.7", default-features = false, features = [
 pairing = "0.22"
 lazy_static = { version = "1", optional = true, default-features = false }
 rand = { version = "0.8.5", default-features = false }
-# sha2 = { version = "0.9", default-features = false }
-sha2 = "0.9"
+sha2 = { version = "0.9", default-features = false }
 hex = { version = "0.4", optional = true, default-features = false }
 
 [features]
